# CircuitsVis

./: .gitignore  Demonstration.ipynb  PySvelteDemo.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  tsconfig.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CD.yml  Python.yml  React.yml  checks.yml  codeql.yml  release.yml  storybook.yml
pysvelte/: .eslintrc.js  ExtJsonEncoder.py  SvelteComponent.py  __init__.py  build.py  config.py  esbuild.js  html.py  html_wrapper.py  javascript.py  package.json  publish.py  tsconfig.json  vis_paths.py
pysvelte/svelte/: package-lock.json  package.json  webpack.config.js
pysvelte/svelte/src/: AttentionMulti.svelte  Hello.svelte  TextSingle.svelte  loader.js
pysvelte/svelte/src/components/: ArrayImage.svelte
pysvelte/svelte/src/shared_utils/: colors.js
pysvelte/tests/: test_build.py
pysvelte/tests/snapshots/: snap_test_build.py
pysvelte/visualizations/activations/: TextNeuronActivations.svelte  activations.py
pysvelte/visualizations/activations/utils/: Text.svelte  colors.js
pysvelte/visualizations/attention/: AttentionMulti.svelte  AttentionPatterns.tsx  attention.py
pysvelte/visualizations/attention/components/: AttentionImage.tsx  AttentionTokens.tsx  useHoverLock.tsx
pysvelte/visualizations/attention/tests/: AttentionPatterns.test.tsx
pysvelte/visualizations/attention/tests/__snapshots__/: AttentionPatterns.test.tsx.snap
pysvelte/visualizations/attention/utils/: ArrayImage.svelte  Attention.svelte  LockableValueToggle.svelte  lockable_values.js
pysvelte/visualizations/examples/: Hello.py  examples.py  lit.js  lit_ts.ts  react.tsx  svelte.svelte  vanilla_js.js
pysvelte/visualizations/examples/utils/: hello.svelte
python/: .pylintrc  Demonstration.ipynb  FetchActivationsDemo.ipynb  LICENSE.txt  README.md  pyproject.toml
python/circuitsvis/: __init__.py  activations.py  attention.py  attribution.py  circuitsvis_demo.ipynb  examples.py  log_probs.py  logits.py  neuron_view.js  render.py  samples.py  tokens.py  tokens_multi.py  topk.py  topk_samples.py  topk_tokens.py
python/circuitsvis/tests/: test_activations.py  test_attention.py  test_hello.py  test_init.py  test_render.py  test_tokens.py  test_topk.py  test_topk_samples.py  test_topk_tokens.py
python/circuitsvis/tests/snapshots/: snap_test_activations.py  snap_test_attention.py  snap_test_hello.py  snap_test_render.py  snap_test_tokens.py  snap_test_topk.py  snap_test_topk_samples.py  snap_test_topk_tokens.py
python/circuitsvis/utils/: build_js.py  convert_props.py  render.py
python/circuitsvis/utils/tests/: test_convert_props.py  test_render.py
python/circuitsvis/utils/tests/snapshots/: snap_test_render.py
python/other/: test.py
react/: .eslintignore  .eslintrc.js  README.md  esbuild.js  package.json  tsconfig.build.json  tsconfig.json
react/.storybook/: main.js  preview.js
react/src/: index.ts  render-helper.ts  repl_tf.js
react/src/activations/: TextNeuronActivations.stories.tsx  TextNeuronActivations.tsx
react/src/activations/mocks/: textNeuronActivations.ts
react/src/activations/tests/: TestNeuronActivations.test.tsx
react/src/attention/: AttentionHeads.stories.tsx  AttentionHeads.tsx  AttentionPattern.stories.tsx  AttentionPattern.tsx  AttentionPatterns.stories.tsx  AttentionPatterns.tsx
react/src/attention/components/: AttentionImage.tsx  AttentionTokens.tsx  useHoverLock.tsx
react/src/attention/components/tests/: useHoverLock.test.tsx
react/src/attention/mocks/: attention.ts
react/src/attention/tests/: AttentionPatterns.test.tsx
react/src/attention/tests/__snapshots__/: AttentionPatterns.test.tsx.snap
react/src/examples/: Hello.stories.tsx  Hello.tsx
react/src/logits/: LogProbVis.stories.tsx  LogProbVis.tsx  LogitsTopK.stories.tsx  LogitsTopK.tsx  TokenLogProbs.stories.tsx  TokenLogProbs.tsx
react/src/logits/mocks/: logProbVis.ts  mockTokenLogProbs.ts
react/src/shared/: NumberSelector.tsx  RangeSelector.tsx  SampleItems.tsx
react/src/shared/tests/: rangeStrArrConversion.test.ts
react/src/tokens/: ColoredTokens.stories.tsx  ColoredTokens.tsx  ColoredTokensCustomTooltips.tsx  ColoredTokensMulti.stories.tsx  ColoredTokensMulti.tsx
react/src/tokens/mocks/: coloredTokens.ts  coloredTokensMulti.ts
react/src/tokens/utils/: Token.tsx  Token.unit.test.tsx  TokenCustomTooltip.tsx
react/src/topk/: Topk.stories.tsx  Topk.tsx  TopkSamples.stories.tsx  TopkSamples.tsx  TopkTokens.stories.tsx  TopkTokens.tsx
react/src/topk/mocks/: topk.ts  topkSamples.ts  topkTokens.ts
react/src/topkTokens/: TopkTokens.stories.tsx  TopkTokens.tsx
react/src/topkTokens/mocks/: topkTokens.ts
react/src/utils/: arrayOps.ts  getTokenBackgroundColor.ts  misc.ts  rangeStrArrConversion.ts
react/src/utils/tests/: arrayOps.test.ts  getTokenBackgroundColor.test.ts  rangeStrArrConversion.test.ts
src/: AttentionMulti.py  AttentionMulti.svelte  TextSingle.py  TextSingle.svelte  loader.js
src/components/: LockableValueToggle.svelte
src/shared_utils/: colors.js  lockable_values.js
