[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "PySvelte"
description = "A library for visualising and interpreting model activations within a Jupyter Notebook"
version = "0.0.1"
dependencies = [
    "datasets",
    "einops",
    "filehash",
    "ipython",
    "jupyterlab",
    "numpy",
    "pandas",
    "pytest",
    "snapshottest",
    "torch",
    "tqdm",
    "transformers",
    "ipython",
    "typeguard"
]
