[tool.poetry]
name = "circuitsvis"
version = "0.0.0" # This is updated by the CI/CD pipeline
description = "Mechanistic Interpretability Visualizations"
authors = ["Alan Cooney <41682961+alan-cooney@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
include = ["circuitsvis/dist/cdn/iife.js", "circuitsvis/dist/cdn/iife.js.map"]

[tool.poetry.dependencies]
importlib-metadata = "^5.1.0"
numpy = [{ version = "^1.21", python = "<3.10" },
         { version = "^1.23", python = ">=3.10" }]
python = "^3.7"
torch = "^1.10"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
mypy = "^0.990"
poethepoet = "^0.16.5"
pytest = "^7.2.0"
snapshottest = "^0.6.0"
twine = "^4.0.1"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
pre_build  = "bundle-js"

[tool.poe.tasks.bundle-js]
script = "circuitsvis.utils.build_js:build"
help   = "Bundle up the latest version of the react library as a single script file."
