[tool.poetry]
name = "circuitsvis"
version = "0.0.0" # This is updated by the CI/CD pipeline
description = "Mechanistic Interpretability Visualizations"
authors = ["Alan Cooney <41682961+alan-cooney@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
include = ["circuitsvis/dist/cdn/iife.js", "circuitsvis/dist/cdn/iife.js.map"]

[tool.poetry.dependencies]
importlib-metadata = ">=5.1.0"
numpy = [{ version = ">=1.20,<1.25", python = ">=3.8,<3.9" },
         { version = ">=1.24", python = ">=3.9,<3.12" },
         { version = ">=1.26", python = ">=3.12,<3.13" }]
python = ">=3.8" 
torch = ">=1.10" # See PyTorch 2 fix below
# PyTorch 2.1.0 Bug Fix PyTorch didn't put their dependencies metadata into all wheels for 2.1.0, so
# it doesn't work with Poetry. This is a known bug - the workaround is to place them manually here
# (from the one wheel that did correctly list them). This was broken in 2.0.1 and the fix wasn't
# made for 2.1.0, however Meta are aware of the issue and once it is fixed (and the torch version
# requirement bumped) this should be removed. Note also the python version is used to specify that
# this is only added where v2 torch is installed (as per the torch version requirement above).
# https://github.com/pytorch/pytorch/issues/100974
# https://github.com/python-poetry/poetry/issues/7902#issuecomment-1583078794
nvidia-cuda-nvrtc-cu12 = { version = "==12.1.105", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cuda-runtime-cu12 = { version = "==12.1.105", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cuda-cupti-cu12 = { version = "==12.1.105", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cudnn-cu12 = { version = "==8.9.2.26", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cublas-cu12 = { version = "==12.1.3.1", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cufft-cu12 = { version = "==11.0.2.54", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-curand-cu12 = { version = "==10.3.2.106", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cusolver-cu12 = { version = "==11.4.5.107", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-cusparse-cu12 = { version = "==12.1.0.106", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-nccl-cu12 = { version = "==2.18.1", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
nvidia-nvtx-cu12 = { version = "==12.1.105", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
triton = { version = "==2.1.0", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
# End PyTorch 2.1.0 Bug Fix

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2.0"
mypy = ">=0.990"
poethepoet = ">=0.16.5"
pytest = ">=7.2"
snapshottest = ">=0.6"
twine = ">=4.0.1"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = ">=3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
pre_build  = "bundle-js"

[tool.poe.tasks.bundle-js]
script = "circuitsvis.utils.build_js:build"
help   = "Bundle up the latest version of the react library as a single script file."
